# flappy-bird

./: .gitignore  CMakeHelpers.cmake  CMakeLists.txt  Makefile  README.md  gameplay.mov  toolchain.py
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
sandbox/: CMakeLists.txt
sandbox/src/: main.c
src/engine/: engine.c
src/game/: game.c  game.h
src/game/states/: gameplay.c  intro.c  placeholder.c  placeholder.h
src/system/: defines.h
src/system/_platform/linux/: memory.c
src/system/_platform/macos/: debug.c  memory.c
