cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0054 NEW)
include("CMakeHelpers.cmake")


# ===== Build options ===== #
set(PROJECT_BUILD_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
option(BUILD_SHARED_LIBS "Build shared libs" OFF)


# ===== Project ===== #
project("flappy-bird" LANGUAGES C)


# ===== Third Party libraries ===== #
add_submodule("raylib" "src" "raylib")
add_submodule("raygui" "src" "raygui")
add_submodule("humanize" "src" "humanize")
add_submodule("klib" "src" "klib")


# ===== Source files ===== #
list_sources(SOURCES "src")
set(SOURCE_MAIN "src/main.c")


# ===== Include directories ===== #
list(APPEND INCLUDES "src")
include_directories(${INCLUDES})


# ===== Link libraries ===== #
list(APPEND LINK_LIBRARIES "")
link_libraries(${LINK_LIBRARIES})


# ===== Targets ===== #
add_executable(${PROJECT_NAME} ${SOURCE_MAIN} ${SOURCES})
add_library("lib-${PROJECT_NAME}" STATIC ${SOURCES})
if (UNIX)
    set_target_properties(
    	${PROJECT_NAME}
    	PROPERTIES
    	OUTPUT_NAME "${PROJECT_NAME}"
    	RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BUILD_DIRECTORY}/debug"
    	RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BUILD_DIRECTORY}/release"
    )
elseif (WIN32)
    set_target_properties(
        ${PROJECT_NAME}
        PROPERTIES
        OUTPUT_NAME "${PROJECT_NAME}"
        RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_BUILD_DIRECTORY}\\debug"
        RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_BUILD_DIRECTORY}\\release"
    )
endif()

# ===== Sandbox ===== #
add_subdirectory("sandbox")
